# hse-lyceum-web-2025-project

./: README.md
blog-api/: .editorconfig  .pre-commit-config.yaml  ER_DIAGRAM.md  data.json  main.py  models.py  pyproject.toml  requirements.txt  schema.sql  storage.py
blog-api/templates/: base.html  create_post.html  create_user.html  edit_post.html  edit_user.html  index.html  list_users.html  view_post.html  view_user.html
