[project]
name = "behelit-blog"
version = "0.1.0"
description = "built FastAPI"
authors = [
    {name = "Zakhar", email = "zavenger00@yandex.ru"},
]
dependencies = [
    "fastapi>=0.95.2",
    "uvicorn[standard]>=0.22.0",
    "pydantic>=1.10.9",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6",
    "email-validator>=2.0.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[tool.setuptools]
packages = ["blog_api"]

[tool.setuptools.package-dir]
"blog_api" = "."

[tool.setuptools.exclude-package-data]
"*" = ["static/*", "templates/*", "data.json", "*.sql", "*.md"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  | \.git
  | \.venv
  | __pycache__
  | static
  | templates
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.flake8]
max-line-length = 79
extend-ignore = "E203, W503"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "static",
    "templates",
]
